<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="hello_world">Hello World</string>
    <string name="app_name">Enipro</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_swipe_view_demo1">Swipe Demo1</string>
    <string name="title_activity_swipe_view_demo2">Swipe Demo2</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="retry">RETRY</string>
    <string name="login_text">Login</string>
    <string name="signup_text">Sign Up</string>
    <string name="member">Don\'t have an account?</string>
    <string name="incorrect">Incorrect</string>
    <string name="wait">Please wait &#8230;</string>
    <string name="already_a_user">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password(above 8 characters)</string>
    <string name="pass">Password</string>
    <string name="sign_up_btn_text">CREATE ACCOUNT</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="input_content">Email</string>
    <string name="empty"></string>
    <string name="bio">Biography</string>
    <string name="title_activity_quick_reservation">QuickReservation</string>
    <string name="login_btn_text">LOGIN</string>
    <string name="country">Nigeria</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="tandc">By logging in, you agree to Enipro\'s Privacy Policy and Terms of Use</string>
    <string name="tandcs">By creating an account, you agree to Enipro\'s Privacy Policy and Terms of Use</string>
    <string name="mock_bio">
        As a design thinker, my skills and process revolve around people; consequently, I adhere to an iterative process over quick and invalidated results. I believe that by articulating the right problem, designers can architect solutions ingrained with empathy and genuine intent. I am an asset to any creative or product team in search of burgeoning, diverse talent with disruptive ideas and intense work ethic. I believe that by balancing business objectives, executing on product vision, and obsessively prioritizing consumers, genuine brands remain innovative and successful.

Knowledge Domains: User experience design, User Research (evaluative), Service Design, Usability Testing, Design Thinking, Qualitative Research, Storytelling, Agile/Lean Methodologies, Product Management, Product/feature planning, Consumer Segmentation, Brand Development, Design Collaboration, Web Accessibility, Apple HIG: iOS, MacOS, WatchOS, tvOS ; Material Design; Microsoft Design Language, IBM Design Language
    </string>
    <string name="static_bio_string">Tell a professional story with a bio about you</string>
    <string-array name="nav_footer_items">
        <item>LOG OUT</item>
    </string-array>
    <string name="openDrawer">Drawer Open</string>
    <string name="closeDrawer">Drawer Closed</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="enable_gps_title">Location Services Disabled</string>
    <string name="enable_gps">Please enable location services.</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes">You have unsaved changes. Do you want to discard or cancel.</string>
    <string name="achievement_edit">Achievements</string>
    <string name="mock_uni">University of Lagos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="country_codes">
        <item>+33</item>
        <item>+234</item>
    </string-array>
    <string name="user_type">Professional</string>
    <string name="invalid_pass">Please enter a valid password. Password must be more than 8 characters, must contain a number and a symbol.</string>
    <string name="intro_message">
        <![CDATA[


            This sample uses the Google Places Geo Data API for Android to provide autocomplete suggestions.
            It shows how to use a custom Adapter to display suggestions in an AutocompleteTextView.
            Once selected, details about a place are retrieved based on its Place id from the
            Places Geo Data API.


        ]]>
    </string>
    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="clear_text">Clear Text</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_spash_screen">SpashScreenActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_icon_title">Search</string>
    <string name="user_post_mock_name">Agbanagba Oghenetega</string>
    <string name="user_post_mock_first_name">Oghenetega Agbanagba</string>
    <string name="user_post_mock_last_name">Agbanagba</string>
    <string name="user_post_mock_date">2d</string>
    <string name="user_post_mock_date_prefix">on</string>
    <string name="user_post_mock_time">3:45 pm</string>
    <string name="user_post_headline">Software Engineer, Bank of America Merrill Lynch</string>
    <string name="search_headline">Civil Engineering Student, University of Lagos.</string>
    <string name="user_post_mock_content">You’ve already noticed our content flash to celebrate the Retrofit 2 release. This is another post as part of our contribution to push the Retrofit community forward by sharing the knowledge about internal changes of this Retrofit release. If you worked with Retrofit 1, you know the rudimentary behavior in regard to url handling. With Retrofit 2, there’s a kind of fundamental shift in how to think and apply your urls including any type of parameter.</string>
    <string name="post_likes_count">12</string>
    <string name="post_comment_responses">15</string>
    <string name="view_more">view more</string>
    <string name="title_activity_user_search">UserSearchActivity</string>
    <string name="chat_last_time">15:43</string>
    <string name="chat_last_message">Hello Please message me when you get this.</string>
    <string name="button_like">Like</string>
    <string name="button_more">More</string>
    <string name="button_comment">Comment</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="post_text">POST</string>
    <string name="post_hint">Write Post&#8230;</string>
    <string name="post_hint_2">What\'s happening?</string>
    <string name="tags_hint">Tags</string>
    <string name="title_activity_profile_activty">ProfileActivty</string>
    <string name="title_activity_forum">Forum</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="feed_comment_label">Comments</string>
    <string name="save_as_draft">Save as draft?</string>
    <string name="discard">DISCARD</string>
    <string name="save">SAVE</string>
    <string name="saved">Saved</string>
    <string name="save2">Save</string>
    <string name="sending_post">Sending Post&#8230;</string>
    <string name="sent">Sent</string>
    <string name="sent_indicator">SENT</string>
    <string name="noti_error">Error Sending Post. Please try again.</string>
    <string name="bio_edit">Bio</string>
    <string name="profile_headline">Profile Headline</string>
    <string name="degree">Degree</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="session_timing">Session Timing</string>
    <string name="session_period">Session Period</string>
    <string name="next">Next</string>
    <string name="search_student">Search Student</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit">Edit</string>
    <string name="logout">Log out</string>
    <string name="share_text">Share via</string>
    <string name="no_feed_data">No Feed Data</string>
    <string name="cannot_load_feeds">Cannot load feeds at this time.</string>
    <string name="no_saved_feed">No saved Feed</string>
    <string name="no_feed_data_instructions">Tap the \'+\' button to create a feed item.</string>
    <string name="add_comment_hint">Write a comment&#8230;</string>
    <string name="add_tags">Add Tags</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_continue">CONTINUE</string>
    <string name="btn_skip">SKIP</string>
    <string name="university">University</string>
    <string name="course">Course of Study</string>
    <string name="start_year">Start Year</string>
    <string name="end_year">End Year</string>
    <string name="edu_desc">You will be connected to people based on where you went to school.</string>
    <string name="edu_top_text">Where do you study?</string>
    <string name="exp_top_text">Where do you work?</string>
    <string name="industry">Industry</string>
    <string name="organisation">Organisation</string>
    <string name="role">Role</string>
    <string name="interests_desc">Add interests to improve feeds and get feeds based on your interests.</string>
    <string name="current_work">I currently work here</string>
    <string-array name="photo_items">
        <item>Take a photo</item>
        <item>Choose existing photo</item>
    </string-array>
    <string-array name="attachement_items">
        <item>Image</item>
        <item>Document</item>
    </string-array>
    <string-array name="video_items">
        <item>Take a video</item>
        <item>Choose existing video</item>
    </string-array>
    <string-array name="photo_edit_items">
        <item>Edit Title</item>
        <item>Delete</item>
    </string-array>
    <string-array name="app_user_more_items">
        <item>Edit Post</item>
        <item>View Tags</item>
        <item>Delete Post</item>
    </string-array>
    <string-array name="foreign_user_more_items">
        <item>Hide Post</item>
        <item>View Tags</item>
    </string-array>
    <string name="enforce_tags">Post must have a tag</string>
    <string name="comment_error">Can\'t post comment. Please try again.</string>
    <string name="comments">Comments</string>
    <string name="no_chatuser">No Chat User</string>
    <string name="no_chat_inst_prof1">Users in your network will appear here.</string>
    <string name="no_chat_inst_prof2">Add users to your network.</string>
    <string name="hyphen">-</string>
    <string name="exp_org">Unilever Plc Nigeria</string>
    <string name="exp_industry">Manufacturing</string>
    <string name="exp_role">Manager, Machine Operations</string>
    <string name="exp_from">2017</string>
    <string name="exp_to">Present</string>
    <string name="bank_txt">Bank Name</string>
    <string name="bank_account_txt">Bank Account Number</string>
    <string name="premium_info">As per the Terms and Condition of Enipro, proceeds from each premium content transaction goes 60/40. </string>
    <string name="bank_account_desc">Enter 10-digit NUBAN number</string>
    <string name="amount">Amount</string>
</resources>