<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.signup.AddExperienceActivity">

    <TextView
        android:id="@+id/top_text_exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/exp_top_text"
        android:textSize="30sp"
        android:fontFamily="@string/font_roboto_medium" />


    <EditText
        android:id="@+id/industry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_text_exp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="50dp"
        android:hint="@string/industry"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/org"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/industry"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:hint="@string/organisation"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/org"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:hint="@string/role"
        android:textSize="15sp" />

    <GridLayout
        android:id="@+id/duration_edu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/role"
        android:layout_marginTop="20dp"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="1">

        <EditText
            android:id="@+id/start_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:focusable="false"
            android:hint="@string/from"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/end_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:focusable="false"
            android:hint="@string/to"
            android:textSize="15sp" />

    </GridLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/duration_edu_layout"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:text="@string/current_work" />

    <Button
        android:id="@+id/continue_exp"
        style="@style/ButtonTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:text="@string/btn_continue"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@string/font_roboto_medium" />
</RelativeLayout>