<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.signup.AddEducationActivity">

    <TextView
        android:id="@+id/top_text_edu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/edu_top_text"
        android:textSize="30sp"
        android:fontFamily="@string/font_roboto_regular" />

    <TextView
        android:id="@+id/desc_edu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_text_edu"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/edu_desc"
        android:fontFamily="@string/font_roboto_medium" />


    <EditText
        android:id="@+id/university"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc_edu"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:hint="@string/university"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/university"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:hint="@string/course"
        android:textSize="15sp" />

    <GridLayout
        android:id="@+id/duration_edu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/course"
        android:layout_marginTop="20dp"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="1">

        <EditText
            android:id="@+id/start_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:focusable="false"
            android:hint="@string/from"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/end_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:focusable="false"
            android:hint="@string/to"
            android:textSize="15sp" />

    </GridLayout>

    <Button
        android:id="@+id/continue_edu"
        style="@style/ButtonTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:text="@string/btn_continue"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@string/font_roboto_medium" />

</RelativeLayout>