<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/premium_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/premium_info" />

    <TextView
        android:id="@+id/bank_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/premium_info"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/bank_txt" />


    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/bank_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bank_txt"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/bank_account_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bank_name"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/bank_account_txt" />

    <TextView
        android:id="@+id/bank_account_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bank_account_txt"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/bank_account_desc" />

    <EditText
        android:id="@+id/bank_account_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bank_account_desc"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:inputType="number"
        android:maxLength="10" />

    <TextView
        android:id="@+id/amount_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bank_account_number"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/amount" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/amount_txt"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:inputType="number" />

</RelativeLayout>