<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/first_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp">

        <!-- Text box that collects the first name of the user. -->
        <android.support.design.widget.TextInputEditText
            android:id="@+id/first_name"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:hint="@string/first_name"
            android:inputType="text"
            app:robotoTypeface="roboto_regular" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/last_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_name_layout">

        <!-- Text box that collects the last name of the user. -->
        <android.support.design.widget.TextInputEditText
            android:id="@+id/last_name"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="text"
            app:robotoTypeface="roboto_regular" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/signUpEmail_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_name_layout">

        <!-- Text box that collects the email address of the user. -->
        <android.support.design.widget.TextInputEditText
            android:id="@+id/signUpEmail"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:robotoTypeface="roboto_regular" />
    </android.support.design.widget.TextInputLayout>

    <!-- Spinner view that shows list of country codes depending on the country of the user. -->
    <Spinner
        android:id="@+id/country_code_spinner"
        style="@style/EditTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpEmail_Layout"
        android:layout_marginTop="10dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mobile_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/country_code_spinner"
        android:layout_below="@id/signUpEmail_Layout">

        <!-- Text box collecting the mobile number of the user. -->
        <android.support.design.widget.TextInputEditText
            android:id="@+id/mobile_number"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            app:robotoTypeface="roboto_regular" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signUpPassword_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobile_number_layout"
        app:passwordToggleContentDescription="@string/pass"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">

        <!-- Text box that collects password of the user. -->
        <android.support.design.widget.TextInputEditText
            android:id="@+id/signUpPassword"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:robotoTypeface="roboto_regular" />
    </android.support.design.widget.TextInputLayout>

    <!-- Spinner view that shows list of user types -->
    <Spinner
        android:id="@+id/user_type"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signUpPassword_Layout"
        android:layout_marginTop="10dp" />

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/tandc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_type"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/tandcs"
        android:textSize="15sp"
        app:robotoTypeface="roboto_light" />

    <!-- Sign up button.-->
    <com.devspark.robototextview.widget.RobotoButton
        android:id="@+id/btnSignUpInSignUp"
        style="@style/ButtonTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tandc"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_teal"
        android:text="@string/sign_up_btn_text"
        app:robotoTypeface="roboto_medium" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSignUpInSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <!-- Text view directing the user to sign up for an account if they don't have one. -->
        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/already_a_user_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_a_user"
            android:textSize="15sp"
            app:robotoTypeface="roboto_light" />

        <!-- A clickable text view that takes the user to -->
        <com.devspark.robototextview.widget.RobotoTextView
            android:id="@+id/clickable_sign_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_toEndOf="@id/already_a_user_text"
            android:text="@string/sign_in"
            android:textSize="15sp"
            app:robotoTypeface="roboto_light" />
    </RelativeLayout>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/snackbar_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>